--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header h1 {
     height: 800px;
     padding: 50px;
     background-color: #f4f4f4;
-    background-image: url('Ocean-Bottle-Recycled-Ocean-Bound-Plastic.webp');
+    background-image: url('home.webp');
     background-size: cover;
     margin-bottom: 10px;
 }
